DbConnection, DataBase --add Добавлена библиотека для подключения к базе данных.

--- a/Store/Store.csproj
+++ b/Store/Store.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DbConnectionLib\DbConnectionLib.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
       <None Update="img\product.jpg">
         <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       </None>
