CreateDbConnectionTemplate --add CreateCard --fix Добавлена кнопка генерации шаблона файла подключения к БД. БагаФикс: Теперь путь к картинкам не нужно менять. Определяется путь до программы. Там должна находится папка \img, а в ней контент.

--- a/Store/Store.csproj
+++ b/Store/Store.csproj
@@ -12,7 +12,7 @@
 
     <ItemGroup>
       <None Update="img\product.jpg">
-        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
 
