--- a/Store/Store.csproj
+++ b/Store/Store.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DataBaseLib\DataBaseLib.csproj" />
       <ProjectReference Include="..\DbConnectionLib\DbConnectionLib.csproj" />
     </ItemGroup>
 
