Создание модели данных

--- a/DataBaseLib/DataBaseLib.csproj
+++ b/DataBaseLib/DataBaseLib.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DataModelLib\DataModelLib.csproj" />
       <ProjectReference Include="..\DbConnectionLib\DbConnectionLib.csproj" />
     </ItemGroup>
 
